refactor: thread_safe 위해 ConcurrentHashMap로 수정(next-step/spring-gift-product#31)